[package]
name = "att-fx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "radar-binance"
path = "src/radar-binance.rs"

[[bin]]
name = "radar-okx"
path = "src/radar-okx.rs"

[[bin]]
name = "radar-huobi"
path = "src/radar-huobi.rs"

[dependencies]
chrono = "0.4"
flate2 = "1"
futures-util = "0.3"
rust_decimal = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2"
