[package]
name = "att-fx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jameswebb-binance"
path = "src/jameswebb-binance.rs"

[[bin]]
name = "jameswebb-okx"
path = "src/jameswebb-okx.rs"

[[bin]]
name = "jameswebb-huobi"
path = "src/jameswebb-huobi.rs"

[dependencies]
chrono = "0.4"
flate2 = "1"
futures-util = "0.3"
rust_decimal = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2"
