[package]
name = "att-fx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jameswebb-binance"
path = "src/jameswebb-binance.rs"

[[bin]]
name = "jameswebb-okx"
path = "src/jameswebb-okx.rs"

[[bin]]
name = "jameswebb-huobi"
path = "src/jameswebb-huobi.rs"

[[bin]]
name = "jameswebb-bybit"
path = "src/jameswebb-bybit.rs"

[[bin]]
name = "jameswebb-coinbase"
path = "src/jameswebb-coinbase.rs"

[[bin]]
name = "jameswebb-kraken"
path = "src/jameswebb-kraken.rs"

[[bin]]
name = "jameswebb-bitget"
path = "src/jameswebb-bitget.rs"

[[bin]]
name = "jameswebb-gateio"
path = "src/jameswebb-gateio.rs"

[[bin]]
name = "jameswebb-mexc"
path = "src/jameswebb-mexc.rs"

[[bin]]
name = "jameswebb-bitfinex"
path = "src/jameswebb-bitfinex.rs"

[[bin]]
name = "jameswebb-upbit"
path = "src/jameswebb-upbit.rs"

[[bin]]
name = "jameswebb-bitstamp"
path = "src/jameswebb-bitstamp.rs"

[[bin]]
name = "jameswebb-crypto-com"
path = "src/jameswebb-crypto-com.rs"

[[bin]]
name = "jameswebb-phemex"
path = "src/jameswebb-phemex.rs"

[[bin]]
name = "jameswebb-dydx"
path = "src/jameswebb-dydx.rs"

[[bin]]
name = "jameswebb-uniswap-v3"
path = "src/jameswebb-uniswap-v3.rs"

[[bin]]
name = "jameswebb-gmx"
path = "src/jameswebb-gmx.rs"

[[bin]]
name = "jameswebb-1inch"
path = "src/jameswebb-1inch.rs"

[[bin]]
name = "jameswebb-serum"
path = "src/jameswebb-serum.rs"

[[bin]]
name = "jameswebb-jupiter"
path = "src/jameswebb-jupiter.rs"

[[bin]]
name = "jameswebb-pancakeswap"
path = "src/jameswebb-pancakeswap.rs"

[[bin]]
name = "jameswebb-wikimedia"
path = "src/jameswebb-wikimedia.rs"

[[bin]]
name = "hubble_galaxy"
path = "src/hubble_galaxy.rs"

[dependencies]
chrono = "0.4"
eventsource-client = { version = "0.17.2", features = ["hyper-rustls-native-roots"] }
flate2 = "1"
futures-util = "0.3"
launchdarkly-sdk-transport = { version = "0.1.0", features = ["hyper-rustls-native-roots"] }
rust_decimal = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2"
reqwest = { version = "0.11", features = ["json"] }
redis = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
